[package]
name = "fptool"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
footprint = { workspace = true }
clap = { version = "^2.33" }
log = { version = "^0.4" }
simple_logger = { version = "^4.2" }
chrono = { version = "=0.4.26" }

[[bin]]
name = "fptool"
path = "src/fptool.rs"